--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: #669ee6;
+    background-color: #66e67b;
 }
 header {
     background-color: #1618a4;
